--- a/Frontend - Yumme/package.json
+++ b/Frontend - Yumme/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.25.0",
     "class-variance-authority": "^0.7.0",
