--- a/Frontend - Yumme/package.json
+++ b/Frontend - Yumme/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-query-devtools": "^5.28.4",
     "axios": "^1.6.8",
