--- a/Frontend - Yumme/package.json
+++ b/Frontend - Yumme/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,6 +31,7 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "jsdoc": "^4.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.350.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
